Assignment/assignment1/initial/src/main/mc/parser/.antlr/MCParser.py
# Generated from c:\Users\Admin\Desktop\Computer Science\Junior\Principles of Programming Languages (CO3005)\Assignment\assignment1\initial\src\main\mc\parser\MC.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class MCParser ( Parser ):

    grammarFileName = "MC.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'if'", "'else'", "'do'", "'while'", "'break'", 
                     "'continue'", "'return'", "'for'", "'float'", "'int'", 
                     "'void'", "'boolean'", "'string'", "'+'", "'*'", "'!'", 
                     "'||'", "'!='", "'<'", "'<='", "'='", "'-'", "'/'", 
                     "'%'", "'&&'", "'=='", "'>'", "'>='", "'['", "']'", 
                     "'('", "')'", "'{'", "'}'", "';'", "','" ]

    symbolicNames = [ "<INVALID>", "IF", "ELSE", "DO", "WHILE", "BREAK", 
                      "CONTINUE", "RETURN", "FOR", "FLOATTYPE", "INTTYPE", 
                      "VOIDTYPE", "BOOLEANTYPE", "STRINGTYPE", "ADD", "MUL", 
                      "LOGNOT", "LOGOR", "NOTEQ", "LESS", "LEQ", "ASS", 
                      "SUB", "DIV", "MOD", "LOGAND", "EQ", "GREATER", "GEQ", 
                      "LS", "RS", "LB", "RB", "LP", "RP", "SEMI", "COMMA", 
                      "ID", "INTLIT", "FLOATLIT", "BOOLEANLIT", "STRINGLIT", 
                      "LC", "BC", "WS", "UNCLOSE_STRING", "ILLEGAL_ESCAPE", 
                      "ERROR_CHAR" ]

    RULE_program = 0
    RULE_decl = 1
    RULE_varDecl = 2
    RULE_list_vars = 3
    RULE_var = 4
    RULE_funcDecl = 5
    RULE_funcType = 6
    RULE_array_pointer_type = 7
    RULE_list_param = 8
    RULE_paraDecl = 9
    RULE_express = 10
    RULE_express_ass = 11
    RULE_express_or = 12
    RULE_express_and = 13
    RULE_express_not_or_equal = 14
    RULE_express_compare = 15
    RULE_express_add_sub = 16
    RULE_express_div_mul_mod = 17
    RULE_express_sub_not = 18
    RULE_express_paren = 19
    RULE_operands = 20
    RULE_lit = 21
    RULE_arr_el = 22
    RULE_func_call = 23
    RULE_list_express = 24
    RULE_statements = 25
    RULE_if_s = 26
    RULE_dowhile_s = 27
    RULE_for_s = 28
    RULE_break_s = 29
    RULE_continue_s = 30
    RULE_return_s = 31
    RULE_express_s = 32
    RULE_block_s = 33
    RULE_primtype = 34

    ruleNames =  [ "program", "decl", "varDecl", "list_vars", "var", "funcDecl", 
                   "funcType", "array_pointer_type", "list_param", "paraDecl", 
                   "express", "express_ass", "express_or", "express_and", 
                   "express_not_or_equal", "express_compare", "express_add_sub", 
                   "express_div_mul_mod", "express_sub_not", "express_paren", 
                   "operands", "lit", "arr_el", "func_call", "list_express", 
                   "statements", "if_s", "dowhile_s", "for_s", "break_s", 
                   "continue_s", "return_s", "express_s", "block_s", "primtype" ]

    EOF = Token.EOF
    IF=1
    ELSE=2
    DO=3
    WHILE=4
    BREAK=5
    CONTINUE=6
    RETURN=7
    FOR=8
    FLOATTYPE=9
    INTTYPE=10
    VOIDTYPE=11
    BOOLEANTYPE=12
    STRINGTYPE=13
    ADD=14
    MUL=15
    LOGNOT=16
    LOGOR=17
    NOTEQ=18
    LESS=19
    LEQ=20
    ASS=21
    SUB=22
    DIV=23
    MOD=24
    LOGAND=25
    EQ=26
    GREATER=27
    GEQ=28
    LS=29
    RS=30
    LB=31
    RB=32
    LP=33
    RP=34
    SEMI=35
    COMMA=36
    ID=37
    INTLIT=38
    FLOATLIT=39
    BOOLEANLIT=40
    STRINGLIT=41
    LC=42
    BC=43
    WS=44
    UNCLOSE_STRING=45
    ILLEGAL_ESCAPE=46
    ERROR_CHAR=47

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MCParser.EOF, 0)

        def decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MCParser.DeclContext)
            else:
                return self.getTypedRuleContext(MCParser.DeclContext,i)


        def getRuleIndex(self):
            return MCParser.RULE_program




    def program(self):

        localctx = MCParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 70
                self.decl()
                self.state = 73 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MCParser.FLOATTYPE) | (1 << MCParser.INTTYPE) | (1 << MCParser.VOIDTYPE) | (1 << MCParser.BOOLEANTYPE) | (1 << MCParser.STRINGTYPE))) != 0)):
                    break

            self.state = 75
            self.match(MCParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varDecl(self):
            return self.getTypedRuleContext(MCParser.VarDeclContext,0)


        def funcDecl(self):
            return self.getTypedRuleContext(MCParser.FuncDeclContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_decl




    def decl(self):

        localctx = MCParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decl)
        try:
            self.state = 79
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 77
                self.varDecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 78
                self.funcDecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VarDeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primtype(self):
            return self.getTypedRuleContext(MCParser.PrimtypeContext,0)


        def list_vars(self):
            return self.getTypedRuleContext(MCParser.List_varsContext,0)


        def SEMI(self):
            return self.getToken(MCParser.SEMI, 0)

        def getRuleIndex(self):
            return MCParser.RULE_varDecl




    def varDecl(self):

        localctx = MCParser.VarDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_varDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.primtype()
            self.state = 82
            self.list_vars()
            self.state = 83
            self.match(MCParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class List_varsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MCParser.VarContext)
            else:
                return self.getTypedRuleContext(MCParser.VarContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MCParser.COMMA)
            else:
                return self.getToken(MCParser.COMMA, i)

        def getRuleIndex(self):
            return MCParser.RULE_list_vars




    def list_vars(self):

        localctx = MCParser.List_varsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_list_vars)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.var()
            self.state = 90
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MCParser.COMMA:
                self.state = 86
                self.match(MCParser.COMMA)
                self.state = 87
                self.var()
                self.state = 92
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VarContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MCParser.ID, 0)

        def LS(self):
            return self.getToken(MCParser.LS, 0)

        def INTLIT(self):
            return self.getToken(MCParser.INTLIT, 0)

        def RS(self):
            return self.getToken(MCParser.RS, 0)

        def getRuleIndex(self):
            return MCParser.RULE_var




    def var(self):

        localctx = MCParser.VarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_var)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.match(MCParser.ID)
            self.state = 97
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MCParser.LS:
                self.state = 94
                self.match(MCParser.LS)
                self.state = 95
                self.match(MCParser.INTLIT)
                self.state = 96
                self.match(MCParser.RS)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FuncDeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def funcType(self):
            return self.getTypedRuleContext(MCParser.FuncTypeContext,0)


        def ID(self):
            return self.getToken(MCParser.ID, 0)

        def LB(self):
            return self.getToken(MCParser.LB, 0)

        def RB(self):
            return self.getToken(MCParser.RB, 0)

        def block_s(self):
            return self.getTypedRuleContext(MCParser.Block_sContext,0)


        def list_param(self):
            return self.getTypedRuleContext(MCParser.List_paramContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_funcDecl




    def funcDecl(self):

        localctx = MCParser.FuncDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_funcDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.funcType()
            self.state = 100
            self.match(MCParser.ID)
            self.state = 101
            self.match(MCParser.LB)
            self.state = 103
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MCParser.FLOATTYPE) | (1 << MCParser.INTTYPE) | (1 << MCParser.BOOLEANTYPE) | (1 << MCParser.STRINGTYPE))) != 0):
                self.state = 102
                self.list_param()


            self.state = 105
            self.match(MCParser.RB)
            self.state = 106
            self.block_s()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FuncTypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primtype(self):
            return self.getTypedRuleContext(MCParser.PrimtypeContext,0)


        def VOIDTYPE(self):
            return self.getToken(MCParser.VOIDTYPE, 0)

        def array_pointer_type(self):
            return self.getTypedRuleContext(MCParser.Array_pointer_typeContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_funcType




    def funcType(self):

        localctx = MCParser.FuncTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_funcType)
        try:
            self.state = 111
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 108
                self.primtype()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 109
                self.match(MCParser.VOIDTYPE)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 110
                self.array_pointer_type()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Array_pointer_typeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primtype(self):
            return self.getTypedRuleContext(MCParser.PrimtypeContext,0)


        def LS(self):
            return self.getToken(MCParser.LS, 0)

        def RS(self):
            return self.getToken(MCParser.RS, 0)

        def getRuleIndex(self):
            return MCParser.RULE_array_pointer_type




    def array_pointer_type(self):

        localctx = MCParser.Array_pointer_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_array_pointer_type)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.primtype()
            self.state = 114
            self.match(MCParser.LS)
            self.state = 115
            self.match(MCParser.RS)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class List_paramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def paraDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MCParser.ParaDeclContext)
            else:
                return self.getTypedRuleContext(MCParser.ParaDeclContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MCParser.COMMA)
            else:
                return self.getToken(MCParser.COMMA, i)

        def getRuleIndex(self):
            return MCParser.RULE_list_param




    def list_param(self):

        localctx = MCParser.List_paramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_list_param)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.paraDecl()
            self.state = 122
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MCParser.COMMA:
                self.state = 118
                self.match(MCParser.COMMA)
                self.state = 119
                self.paraDecl()
                self.state = 124
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParaDeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primtype(self):
            return self.getTypedRuleContext(MCParser.PrimtypeContext,0)


        def ID(self):
            return self.getToken(MCParser.ID, 0)

        def LS(self):
            return self.getToken(MCParser.LS, 0)

        def RS(self):
            return self.getToken(MCParser.RS, 0)

        def getRuleIndex(self):
            return MCParser.RULE_paraDecl




    def paraDecl(self):

        localctx = MCParser.ParaDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_paraDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.primtype()
            self.state = 126
            self.match(MCParser.ID)
            self.state = 129
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MCParser.LS:
                self.state = 127
                self.match(MCParser.LS)
                self.state = 128
                self.match(MCParser.RS)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExpressContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def express_ass(self):
            return self.getTypedRuleContext(MCParser.Express_assContext,0)


        def ASS(self):
            return self.getToken(MCParser.ASS, 0)

        def express(self):
            return self.getTypedRuleContext(MCParser.ExpressContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_express




    def express(self):

        localctx = MCParser.ExpressContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_express)
        try:
            self.state = 136
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 131
                self.express_ass(0)
                self.state = 132
                self.match(MCParser.ASS)
                self.state = 133
                self.express()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 135
                self.express_ass(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Express_assContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def express_or(self):
            return self.getTypedRuleContext(MCParser.Express_orContext,0)


        def express_ass(self):
            return self.getTypedRuleContext(MCParser.Express_assContext,0)


        def LOGOR(self):
            return self.getToken(MCParser.LOGOR, 0)

        def getRuleIndex(self):
            return MCParser.RULE_express_ass



    def express_ass(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = MCParser.Express_assContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 22
        self.enterRecursionRule(localctx, 22, self.RULE_express_ass, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.express_or(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 146
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = MCParser.Express_assContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_express_ass)
                    self.state = 141
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 142
                    self.match(MCParser.LOGOR)
                    self.state = 143
                    self.express_or(0) 
                self.state = 148
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class Express_orContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def express_and(self):
            return self.getTypedRuleContext(MCParser.Express_andContext,0)


        def express_or(self):
            return self.getTypedRuleContext(MCParser.Express_orContext,0)


        def LOGAND(self):
            return self.getToken(MCParser.LOGAND, 0)

        def getRuleIndex(self):
            return MCParser.RULE_express_or



    def express_or(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = MCParser.Express_orContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 24
        self.enterRecursionRule(localctx, 24, self.RULE_express_or, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 150
            self.express_and()
            self._ctx.stop = self._input.LT(-1)
            self.state = 157
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,10,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = MCParser.Express_orContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_express_or)
                    self.state = 152
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 153
                    self.match(MCParser.LOGAND)
                    self.state = 154
                    self.express_and() 
                self.state = 159
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,10,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class Express_andContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def express_not_or_equal(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MCParser.Express_not_or_equalContext)
            else:
                return self.getTypedRuleContext(MCParser.Express_not_or_equalContext,i)


        def EQ(self):
            return self.getToken(MCParser.EQ, 0)

        def NOTEQ(self):
            return self.getToken(MCParser.NOTEQ, 0)

        def getRuleIndex(self):
            return MCParser.RULE_express_and




    def express_and(self):

        localctx = MCParser.Express_andContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_express_and)
        self._la = 0 # Token type
        try:
            self.state = 165
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 160
                self.express_not_or_equal()
                self.state = 161
                _la = self._input.LA(1)
                if not(_la==MCParser.NOTEQ or _la==MCParser.EQ):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 162
                self.express_not_or_equal()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 164
                self.express_not_or_equal()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Express_not_or_equalContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def express_compare(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MCParser.Express_compareContext)
            else:
                return self.getTypedRuleContext(MCParser.Express_compareContext,i)


        def LESS(self):
            return self.getToken(MCParser.LESS, 0)

        def LEQ(self):
            return self.getToken(MCParser.LEQ, 0)

        def GREATER(self):
            return self.getToken(MCParser.GREATER, 0)

        def GEQ(self):
            return self.getToken(MCParser.GEQ, 0)

        def getRuleIndex(self):
            return MCParser.RULE_express_not_or_equal




    def express_not_or_equal(self):

        localctx = MCParser.Express_not_or_equalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_express_not_or_equal)
        self._la = 0 # Token type
        try:
            self.state = 172
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 167
                self.express_compare(0)
                self.state = 168
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MCParser.LESS) | (1 << MCParser.LEQ) | (1 << MCParser.GREATER) | (1 << MCParser.GEQ))) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 169
                self.express_compare(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 171
                self.express_compare(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Express_compareContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def express_add_sub(self):
            return self.getTypedRuleContext(MCParser.Express_add_subContext,0)


        def express_compare(self):
            return self.getTypedRuleContext(MCParser.Express_compareContext,0)


        def ADD(self):
            return self.getToken(MCParser.ADD, 0)

        def SUB(self):
            return self.getToken(MCParser.SUB, 0)

        def getRuleIndex(self):
            return MCParser.RULE_express_compare



    def express_compare(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = MCParser.Express_compareContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 30
        self.enterRecursionRule(localctx, 30, self.RULE_express_compare, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 175
            self.express_add_sub(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 182
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,13,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = MCParser.Express_compareContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_express_compare)
                    self.state = 177
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 178
                    _la = self._input.LA(1)
                    if not(_la==MCParser.ADD or _la==MCParser.SUB):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 179
                    self.express_add_sub(0) 
                self.state = 184
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,13,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class Express_add_subContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def express_div_mul_mod(self):
            return self.getTypedRuleContext(MCParser.Express_div_mul_modContext,0)


        def express_add_sub(self):
            return self.getTypedRuleContext(MCParser.Express_add_subContext,0)


        def DIV(self):
            return self.getToken(MCParser.DIV, 0)
